[gd_scene load_steps=9 format=3 uid="uid://cc6i3q8dfbuui"]

[ext_resource type="Script" uid="uid://iufuyjeknf1o" path="res://scripts/gather_zone.gd" id="1_kb2wk"]
[ext_resource type="PackedScene" uid="uid://dfkjhfw7owqyp" path="res://scenes/player.tscn" id="3_btvfw"]
[ext_resource type="PackedScene" uid="uid://c3iuiex6l6mb7" path="res://tile_set_terrain_test.tscn" id="3_g220s"]
[ext_resource type="PackedScene" uid="uid://dvvnm01ihp3nm" path="res://scenes/target_marker.tscn" id="4_doxxt"]
[ext_resource type="PackedScene" uid="uid://b345j37ee4rsk" path="res://scenes/hud.tscn" id="5_g220s"]
[ext_resource type="PackedScene" uid="uid://s2c5nflrkc8a" path="res://scenes/round_end.tscn" id="6_8q4u7"]
[ext_resource type="AudioStream" uid="uid://vrjh8ed687gv" path="res://assets/Cute RPG - Waddlin' Away (Loopable).mp3" id="7_doxxt"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_8wn5g"]
vertices = PackedVector2Array(1034.71, 750, 1022.02, 750, 1022.25, 730, 1034.71, 730, 1574.53, 562.672, 1573.91, 562.656, 1573.92, 562.656, 734.531, 162.672, 733.906, 162.656, 733.922, 162.656, 1014.53, 682.672, 1013.91, 682.656, 1013.92, 682.656, 1375.98, 450, 1375.98, 750, 1370, 610, 1370, 569.977, 1370, 495.141, 1603.94, 470, 1604.87, 448.852, 2535.25, 50, 2535.98, 50, 2535.98, 790, 2057.97, 790, 1664.05, 630, 1604.97, 557.813, 1603.94, 503.789, 1370, 458.313, 1375.25, 450, 470, 161.008, 470, 168.133, 468.227, 167.969, 465.867, 159.477, 910, 681.008, 910, 688.133, 908.227, 687.969, 905.867, 679.477, 907.797, 625.227, 1349.62, 496.117, 1348.23, 567.969, 1345.87, 559.477, 1347.8, 505.227, 1044.87, 568.852, 1022.24, 570.313, 1022.48, 550, 1113.68, 444.391, 1143.13, 444.391, 764.867, 48.8516, 742.242, 50.3125, 742.477, 30, 770, 21.6094, 810, 21.5625, 1316.35, 506.281, 1315.61, 558.398, 1577.74, 556.719, 1574.62, 504.891, 1022.47, 430, 1021.03, 430, 1021.44, 421.156, 1050, 421.609, 462.469, 1150, 461.031, 1150, 461.438, 1141.16, 490, 1141.61, 102.469, 470, 101.031, 470, 101.438, 461.156, 130, 461.609, 22.4688, 30, 21.0313, 30, 21.4375, 21.1563, 50, 21.6094, 741.031, 30, 741.438, 21.1563, 1315.61, 610, 1165.91, 750, 1166.38, 722.852, 293.711, 330, 295.063, 330, 293.711, 370, 223.703, 440.063, 295.063, 370, 293.711, 410, 295.063, 410, 293.711, 450, 1143.7, 400.063, 1213.71, 370, 1215.06, 370, 1213.71, 410, 813.711, 1050, 815.063, 1050, 813.711, 1090, 743.703, 1120.06, 815.063, 1090, 813.711, 1130, 743.133, 1164.39, 1166.33, 886.844, 1165.99, 860.648, 1175.68, 860.828, 1175.25, 890, 326.328, 486.844, 326, 461.07, 370, 461.563, 1246.33, 446.844, 1246, 421.07, 1290, 421.563, 1317.52, 449.102, 1313.14, 490, 846.328, 1166.84, 846, 1141.07, 890, 1141.56, 1015.98, 1210, 1143.7, 310, 1139.89, 310, 1140.33, 290, 1143.65, 290, 1063.7, 790, 1059.89, 790, 1060.33, 770, 1063.65, 770, 743.703, 990, 739.891, 990, 740.328, 970, 743.648, 970, 223.703, 270, 219.891, 270, 220.328, 250, 223.648, 250, 570, 461.563, 570, 460.727, 575.68, 460.828, 575.25, 490, 690, 501.563, 690, 500.727, 695.68, 500.828, 695.25, 530, 890, 541.563, 890, 540.727, 895.68, 540.828, 895.258, 569.102, 850, 541.117, 877.523, 569.102, 850, 541.609, 1370, 421.563, 1370, 420.727, 1375.68, 420.828, 1010, 1141.56, 1010, 1140.73, 1015.68, 1140.83, 1015.25, 1170, 1050, 1226.51, 1050, 1220.73, 1055.68, 1220.83, 1055.25, 1250, 1130, 1261.56, 1130, 1260.73, 1135.68, 1260.83, 1135.25, 1290, 1170, 1306.51, 1170, 1300.73, 1175.68, 1300.83, 1175.25, 1330, 450, 21.5625, 450, 20.7266, 455.68, 20.8281, 455.258, 49.1016, 410, 21.1172, 437.523, 49.1016, 410, 21.5625, 2530, 21.5625, 2530, 20.7266, 2535.68, 20.8281, 1530, 21.5625, 1544.05, 270, 1245.91, 270, 1246.38, 242.852, 1490, 21.5625, 455.977, 230, 325.906, 230, 326.383, 202.852, 435.609, 210, 1175.98, 890, 1175.98, 950, 845.906, 950, 846.383, 922.852, 1137.52, 883.844, 961.102, 903.617, 302.117, 250, 302.43, 270, 295.727, 270, 296.82, 250, 1222.12, 290, 1222.43, 310, 1215.73, 310, 1216.82, 290, 1142.12, 770, 1142.43, 790, 1135.73, 790, 1136.82, 770, 822.117, 970, 822.43, 990, 815.727, 990, 816.82, 970, 297.961, 450, 297.523, 483.844, 1043.94, 590, 1217.96, 410, 1217.52, 443.844, 1043.94, 623.789, 1133.71, 850, 1137.96, 850, 1063.13, 884.391, 817.961, 1130, 817.523, 1163.84, 1662.47, 710, 1662.02, 710, 1662.25, 690, 1664.71, 690, 1542.47, 350, 1542.02, 350, 1542.25, 330, 1544.71, 330, 742.469, 230, 742.023, 230, 742.25, 210, 764.25, 210, 182.469, 870, 182.023, 870, 182.25, 850, 184.711, 850, 1824.05, 1110, 1662.02, 1110, 1662.47, 1070, 1662.02, 1070, 1662.47, 1030, 1662.02, 1030, 1662.47, 990, 2055.98, 830, 1662.02, 990, 1662.47, 950, 1662.02, 950, 1662.47, 910, 1662.02, 910, 1662.47, 870, 1662.02, 870, 1662.47, 830, 1662.02, 830, 1662.47, 790, 1662.02, 790, 1662.47, 750, 1662.02, 750, 1550, 562.141, 1542.47, 590, 1542.02, 590, 1542.47, 550, 1550, 498.109, 1542.02, 550, 1542.47, 510, 1542.02, 510, 1542.47, 470, 1550, 460.789, 1542.02, 470, 1542.47, 430, 1542.02, 430, 1542.47, 390, 1542.02, 390, 1114.71, 243.742, 1114.71, 270, 742.023, 270, 370, 461.117, 410, 461.563, 410, 461.117, 450, 461.563, 670, 610, 450, 461.117, 490, 461.563, 585.5, 495.422, 490, 461.117, 530, 461.563, 530, 461.117, 670, 550, 650, 501.563, 650, 501.117, 695.977, 550, 730, 610, 730, 581.117, 770, 581.563, 857.969, 790, 1022.02, 550, 1022.47, 510, 1090, 421.563, 1022.02, 510, 1022.47, 470, 1022.02, 470, 1050, 421.117, 1290, 421.117, 1330, 421.563, 1350.46, 449.102, 1330, 421.117, 890, 1141.12, 930, 1141.56, 930, 1141.12, 970, 1141.56, 970, 1141.12, 1015.98, 1550, 462.023, 1550, 462.469, 1510, 1015.98, 1510, 462.023, 1510, 462.469, 1470, 462.023, 1470, 462.469, 1430, 462.023, 1430, 462.469, 1390, 462.023, 1390, 462.469, 1350, 462.023, 1350, 462.469, 1310, 462.023, 1310, 462.469, 1270, 462.023, 1270, 462.469, 1230, 462.023, 1230, 462.469, 1190, 462.023, 1190, 490, 1141.12, 530, 1141.56, 1017.97, 1470, 530, 1141.12, 570, 1141.56, 570, 1141.12, 610, 1141.56, 610, 1141.12, 650, 1141.56, 650, 1141.12, 690, 1141.56, 713.68, 1164.39, 714.711, 950, 182.023, 950, 182.469, 910, 714.711, 923.742, 182.023, 910, 184.047, 790, 102.023, 790, 102.469, 750, 102.023, 750, 102.469, 710, 102.023, 710, 102.469, 670, 102.023, 670, 102.469, 630, 223.133, 484.391, 102.023, 630, 102.469, 590, 193.68, 484.391, 102.023, 590, 102.469, 550, 170, 461.563, 102.023, 550, 102.469, 510, 102.023, 510, 130, 461.117, 194.711, 230, 22.0234, 230, 22.4688, 190, 194.711, 203.742, 22.0234, 190, 22.4688, 150, 22.0234, 150, 22.4688, 110, 22.0234, 110, 22.4688, 70, 22.0234, 70, 50, 21.1172, 90, 21.5625, 90, 21.1172, 130, 21.5625, 130, 21.1172, 170, 21.5625, 170, 21.1172, 210, 21.5625, 226.023, 205.023, 210, 21.1172, 250, 21.5625, 250, 21.1172, 290, 21.5625, 290, 21.1172, 330, 21.5625, 330, 21.1172, 370, 21.5625, 370, 21.1172, 770, 21.1172, 810, 21.1172, 850, 21.5625, 850, 21.1172, 890, 21.5625, 890, 21.1172, 930, 21.5625, 930, 21.1172, 970, 21.5625, 970, 21.1172, 1010, 21.5625, 1010, 21.1172, 1050, 21.5625, 1050, 21.1172, 1090, 21.5625, 1090, 21.1172, 1130, 21.5625, 1130, 21.1172, 1170, 21.5625, 1170, 21.1172, 1210, 21.5625, 1210, 21.1172, 1250, 21.5625, 1214.45, 245.406, 1250, 21.1172, 1290, 21.5625, 1290, 21.1172, 1330, 21.5625, 1330, 21.1172, 1370, 21.5625, 1370, 21.1172, 1410, 21.5625, 1410, 21.1172, 1450, 21.5625, 1450, 21.1172, 1490, 21.1172, 1530, 21.1172, 1570, 21.5625, 1571.6, 451, 1570, 21.1172, 1610, 21.5625, 1610, 21.1172, 1650, 21.5625, 1650, 21.1172, 1690, 21.5625, 1690, 21.1172, 1730, 21.5625, 1730, 21.1172, 1770, 21.5625, 1770, 21.1172, 1810, 21.5625, 1810, 21.1172, 1850, 21.5625, 1850, 21.1172, 1890, 21.5625, 1890, 21.1172, 1930, 21.5625, 1930, 21.1172, 1970, 21.5625, 1970, 21.1172, 2010, 21.5625, 2010, 21.1172, 2050, 21.5625, 2050, 21.1172, 2090, 21.5625, 2090, 21.1172, 2130, 21.5625, 2130, 21.1172, 2170, 21.5625, 2170, 21.1172, 2210, 21.5625, 2210, 21.1172, 2250, 21.5625, 2250, 21.1172, 2290, 21.5625, 2290, 21.1172, 2330, 21.5625, 2330, 21.1172, 2370, 21.5625, 2370, 21.1172, 2410, 21.5625, 2410, 21.1172, 2450, 21.5625, 2450, 21.1172, 2490, 21.5625, 2490, 21.1172, 1090, 421.117, 1113.98, 421.383, 1010, 861.609, 1010, 861.117, 1033.98, 861.383, 1033.68, 884.391, 690, 1141.12, 713.977, 1141.38, 170, 461.117, 193.977, 461.383, 875.609, 730, 770, 581.117, 796.648, 581.406, 801.102, 583.617, 875.609, 678.398, 930, 901.563, 930, 901.117, 956.648, 901.406, 2055.98, 1150, 1824.49, 1150, 455.977, 210, 435.609, 158.398, 695.977, 530, 895.977, 730, 895.977, 790, 1015.98, 1170, 1175.98, 1330, 1175.98, 1390, 1137.97, 1390, 1135.98, 1430, 1135.98, 1470, 920.594, 615.594, 923.773, 615.359, 924.508, 623.172, 480.594, 95.5938, 483.773, 95.3594, 484.508, 103.172, 467.797, 105.227, 1350.89, 458.75, 960.156, 615.617, 963.773, 615.359, 964.508, 623.172, 952.891, 626.422, 520.156, 95.6172, 523.773, 95.3594, 524.508, 103.172, 512.891, 106.422, 560.156, 95.6172, 563.773, 95.3594, 564.508, 103.172, 552.891, 106.422, 600.156, 95.6172, 603.773, 95.3594, 604.508, 103.172, 592.891, 106.422, 640.156, 95.6172, 643.773, 95.3594, 644.508, 103.172, 632.891, 106.422, 680.156, 95.6172, 683.773, 95.3594, 684.508, 103.172, 672.891, 106.422, 1066.02, 725.023, 1044.33, 724.133, 1044.97, 677.813, 1134.45, 725.406, 873.141, 610, 875.891, 610, 876.352, 626.281, 1315.89, 490, 433.141, 90, 435.891, 90, 436.352, 106.281, 294.453, 205.406, 820.094, 570, 821.438, 541.156, 980.094, 890, 981.438, 861.156, 2056.63, 830, 856.633, 830, 855.977, 830, 1136.63, 1430, 1016.63, 1510, 1146.02, 245.023, 1063.7, 840.063, 764.969, 157.813, 1570.32, 460.789, 1572.43, 496.594, 992.891, 626.422, 995.141, 617.758, 1012.43, 616.594, 1014.62, 624.891, 1017.74, 676.719, 1000.6, 682.359, 992, 681.492, 988.719, 677.258, 708.719, 157.258, 712.891, 106.422, 715.141, 97.7578, 732.43, 96.5938, 734.617, 104.891, 737.742, 156.719, 720.602, 162.359, 712, 161.492, 1077.79, 1260.99, 955.742, 615.453, 515.742, 95.4531, 555.742, 95.4531, 595.742, 95.4531, 635.742, 95.4531, 675.742, 95.4531, 817.203, 571.422, 817.539, 570, 977.203, 891.422, 977.539, 890, 909.617, 616.117, 469.617, 96.1172, 1604.25, 610, 1542.02, 630, 1550, 610, 597.789, 500.992, 1145.5, 1295.42, 583.023, 490, 855.977, 890, 863.023, 890, 865.5, 895.422, 1023.02, 1210, 1025.5, 1215.42, 1063.02, 1250, 1065.5, 1255.42, 1143.02, 1290, 763.938, 70, 763.938, 103.789, 691.438, 156.18, 688.063, 161.008, 671.633, 161.008, 668.719, 157.258, 651.438, 156.18, 648.063, 161.008, 631.633, 161.008, 628.719, 157.258, 611.438, 156.18, 608.063, 161.008, 591.633, 161.008, 588.719, 157.258, 571.438, 156.18, 568.063, 161.008, 551.633, 161.008, 548.719, 157.258, 531.438, 156.18, 528.063, 161.008, 511.633, 161.008, 508.719, 157.258, 491.438, 156.18, 488.063, 161.008, 971.438, 676.18, 968.063, 681.008, 951.633, 681.008, 948.719, 677.258, 931.438, 676.18, 928.063, 681.008, 814.453, 925.406, 746.023, 925.023, 877.789, 900.992)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 5, 6), PackedInt32Array(7, 8, 9), PackedInt32Array(10, 11, 12), PackedInt32Array(13, 14, 15, 16), PackedInt32Array(17, 13, 16), PackedInt32Array(18, 19, 20, 21, 22, 23, 24, 25, 26), PackedInt32Array(13, 17, 27, 28), PackedInt32Array(29, 30, 31, 32), PackedInt32Array(33, 34, 35, 36, 37), PackedInt32Array(38, 17, 16, 39, 40, 41), PackedInt32Array(42, 43, 44, 45, 46), PackedInt32Array(47, 48, 49, 50, 51), PackedInt32Array(52, 41, 40, 53), PackedInt32Array(26, 25, 54, 55), PackedInt32Array(56, 57, 58, 59), PackedInt32Array(60, 61, 62, 63), PackedInt32Array(64, 65, 66, 67), PackedInt32Array(68, 69, 70, 71), PackedInt32Array(49, 72, 73, 50), PackedInt32Array(74, 15, 14, 75, 76), PackedInt32Array(77, 78, 79, 80), PackedInt32Array(79, 81, 82, 80), PackedInt32Array(82, 83, 84, 80), PackedInt32Array(85, 86, 87, 88, 46), PackedInt32Array(89, 90, 91), PackedInt32Array(92, 91, 93, 94, 95), PackedInt32Array(96, 97, 98, 99), PackedInt32Array(100, 101, 102), PackedInt32Array(103, 104, 105, 106, 107), PackedInt32Array(108, 109, 110, 111), PackedInt32Array(112, 113, 114, 115), PackedInt32Array(116, 117, 118, 119), PackedInt32Array(120, 121, 122, 123), PackedInt32Array(124, 125, 126, 127), PackedInt32Array(128, 129, 130, 131), PackedInt32Array(132, 133, 134, 135), PackedInt32Array(136, 137, 138, 139), PackedInt32Array(140, 136, 139, 141, 142), PackedInt32Array(143, 144, 145, 28), PackedInt32Array(146, 147, 148, 149), PackedInt32Array(150, 151, 152, 153), PackedInt32Array(154, 155, 156, 157), PackedInt32Array(158, 159, 160, 161), PackedInt32Array(162, 163, 164, 165), PackedInt32Array(166, 162, 165, 167, 168), PackedInt32Array(169, 170, 171, 20), PackedInt32Array(172, 173, 174, 175, 176), PackedInt32Array(177, 178, 179, 180), PackedInt32Array(181, 182, 183, 184, 99), PackedInt32Array(185, 96, 99, 184, 186), PackedInt32Array(187, 188, 189, 190), PackedInt32Array(191, 192, 193, 194), PackedInt32Array(195, 196, 197, 198), PackedInt32Array(199, 200, 201, 202), PackedInt32Array(84, 203, 204), PackedInt32Array(205, 42, 46, 88, 206, 207, 208), PackedInt32Array(209, 210, 185, 211), PackedInt32Array(94, 212, 213, 95), PackedInt32Array(214, 215, 216, 217), PackedInt32Array(218, 219, 220, 221), PackedInt32Array(222, 223, 224, 225), PackedInt32Array(226, 227, 228, 229), PackedInt32Array(230, 231, 232), PackedInt32Array(232, 233, 234), PackedInt32Array(234, 235, 236, 237), PackedInt32Array(236, 238, 239, 237), PackedInt32Array(239, 240, 241, 237), PackedInt32Array(241, 242, 243, 237), PackedInt32Array(243, 244, 245, 237), PackedInt32Array(245, 246, 247), PackedInt32Array(247, 248, 249), PackedInt32Array(249, 250, 214), PackedInt32Array(251, 252, 253, 254, 255), PackedInt32Array(254, 256, 257, 255), PackedInt32Array(255, 257, 258, 259, 260), PackedInt32Array(259, 261, 262, 260), PackedInt32Array(262, 263, 264), PackedInt32Array(264, 265, 218), PackedInt32Array(266, 267, 268, 222, 225), PackedInt32Array(102, 269, 270), PackedInt32Array(270, 271, 272, 273), PackedInt32Array(273, 272, 274, 275, 131, 276), PackedInt32Array(275, 277, 278, 131), PackedInt32Array(278, 279, 128, 131), PackedInt32Array(280, 281, 282, 132, 135, 283), PackedInt32Array(284, 285, 286, 287), PackedInt32Array(44, 288, 289, 45), PackedInt32Array(290, 45, 289, 291, 292, 59), PackedInt32Array(292, 293, 56, 59), PackedInt32Array(59, 294, 290), PackedInt32Array(106, 105, 295, 296, 297), PackedInt32Array(297, 296, 298, 143, 28, 27), PackedInt32Array(110, 299, 300, 111), PackedInt32Array(111, 300, 301, 302, 149), PackedInt32Array(302, 303, 146, 149), PackedInt32Array(304, 305, 306, 307), PackedInt32Array(306, 308, 309), PackedInt32Array(309, 310, 311), PackedInt32Array(311, 312, 313), PackedInt32Array(313, 314, 315), PackedInt32Array(315, 316, 317), PackedInt32Array(317, 318, 319), PackedInt32Array(319, 320, 321), PackedInt32Array(321, 322, 323), PackedInt32Array(323, 324, 60, 63), PackedInt32Array(63, 325, 326, 327), PackedInt32Array(326, 328, 329, 327), PackedInt32Array(329, 330, 331, 327), PackedInt32Array(331, 332, 333, 327), PackedInt32Array(327, 333, 334, 335, 336), PackedInt32Array(337, 338, 339, 340), PackedInt32Array(339, 341, 226), PackedInt32Array(342, 343, 344), PackedInt32Array(344, 345, 346), PackedInt32Array(346, 347, 348), PackedInt32Array(348, 349, 350), PackedInt32Array(351, 350, 352, 353, 354), PackedInt32Array(353, 355, 356, 354), PackedInt32Array(357, 354, 356, 358, 359, 67), PackedInt32Array(359, 360, 64, 67), PackedInt32Array(67, 361, 357), PackedInt32Array(362, 363, 364, 365), PackedInt32Array(364, 366, 367), PackedInt32Array(367, 368, 369), PackedInt32Array(369, 370, 371), PackedInt32Array(371, 372, 68, 71), PackedInt32Array(71, 373, 374, 365), PackedInt32Array(374, 375, 376, 365), PackedInt32Array(376, 377, 378, 365), PackedInt32Array(365, 378, 379, 380, 381), PackedInt32Array(380, 382, 383, 381), PackedInt32Array(383, 384, 385), PackedInt32Array(385, 386, 387), PackedInt32Array(387, 388, 389), PackedInt32Array(389, 390, 168), PackedInt32Array(50, 391, 51), PackedInt32Array(51, 392, 393), PackedInt32Array(393, 394, 395), PackedInt32Array(395, 396, 397), PackedInt32Array(397, 398, 399), PackedInt32Array(399, 400, 401), PackedInt32Array(401, 402, 403), PackedInt32Array(403, 404, 405), PackedInt32Array(405, 406, 407), PackedInt32Array(407, 408, 409), PackedInt32Array(409, 410, 411), PackedInt32Array(411, 412, 413, 175, 414), PackedInt32Array(413, 415, 416), PackedInt32Array(416, 417, 418), PackedInt32Array(418, 419, 420), PackedInt32Array(420, 421, 422), PackedInt32Array(422, 423, 424), PackedInt32Array(424, 425, 176), PackedInt32Array(176, 426, 172), PackedInt32Array(172, 427, 428, 19, 429, 173), PackedInt32Array(428, 430, 431, 19), PackedInt32Array(431, 432, 433), PackedInt32Array(433, 434, 435), PackedInt32Array(435, 436, 437), PackedInt32Array(437, 438, 439), PackedInt32Array(439, 440, 441), PackedInt32Array(441, 442, 443), PackedInt32Array(443, 444, 445), PackedInt32Array(445, 446, 447), PackedInt32Array(447, 448, 449), PackedInt32Array(449, 450, 451), PackedInt32Array(451, 452, 453), PackedInt32Array(453, 454, 455), PackedInt32Array(455, 456, 457), PackedInt32Array(457, 458, 459), PackedInt32Array(459, 460, 461), PackedInt32Array(461, 462, 463), PackedInt32Array(463, 464, 465), PackedInt32Array(465, 466, 467), PackedInt32Array(467, 468, 469), PackedInt32Array(469, 470, 471), PackedInt32Array(471, 472, 473), PackedInt32Array(473, 474, 475), PackedInt32Array(475, 476, 169, 20), PackedInt32Array(290, 477, 478, 45), PackedInt32Array(479, 480, 481, 482), PackedInt32Array(335, 483, 484, 336), PackedInt32Array(357, 485, 486, 354), PackedInt32Array(487, 287, 286, 488, 489, 490, 491), PackedInt32Array(492, 493, 494, 186), PackedInt32Array(237, 495, 496, 230), PackedInt32Array(180, 497, 177), PackedInt32Array(498, 180, 179), PackedInt32Array(135, 499, 283), PackedInt32Array(487, 500, 501, 287), PackedInt32Array(149, 502, 111), PackedInt32Array(161, 503, 504, 505), PackedInt32Array(506, 507, 327), PackedInt32Array(307, 306, 309, 327), PackedInt32Array(508, 509, 510, 37), PackedInt32Array(511, 512, 513, 514), PackedInt32Array(27, 515, 297), PackedInt32Array(516, 517, 518, 519), PackedInt32Array(520, 521, 522, 523), PackedInt32Array(524, 525, 526, 527), PackedInt32Array(528, 529, 530, 531), PackedInt32Array(532, 533, 534, 535), PackedInt32Array(536, 537, 538, 539), PackedInt32Array(340, 339, 226, 229), PackedInt32Array(540, 541, 542, 543), PackedInt32Array(544, 545, 546), PackedInt32Array(208, 107, 547, 52, 53, 76, 543, 542), PackedInt32Array(127, 381, 548, 549, 550, 551), PackedInt32Array(552, 553, 142, 141, 544), PackedInt32Array(554, 555, 479, 482), PackedInt32Array(23, 556, 237, 247, 249), PackedInt32Array(287, 557, 558, 273, 284), PackedInt32Array(505, 559, 506), PackedInt32Array(327, 560, 307), PackedInt32Array(327, 309, 311), PackedInt32Array(411, 414, 115, 561, 409), PackedInt32Array(115, 414, 194, 193, 112), PackedInt32Array(112, 193, 86, 85), PackedInt32Array(119, 540, 543, 198, 197, 116), PackedInt32Array(116, 197, 209, 562), PackedInt32Array(211, 562, 209), PackedInt32Array(327, 311, 313), PackedInt32Array(365, 364, 367), PackedInt32Array(266, 225, 563), PackedInt32Array(429, 564, 260, 262, 264), PackedInt32Array(327, 313, 315), PackedInt32Array(340, 229, 342), PackedInt32Array(475, 20, 19, 473), PackedInt32Array(471, 473, 19), PackedInt32Array(469, 471, 19), PackedInt32Array(467, 469, 19), PackedInt32Array(465, 467, 19), PackedInt32Array(463, 465, 19), PackedInt32Array(461, 463, 19), PackedInt32Array(459, 461, 19), PackedInt32Array(457, 459, 19), PackedInt32Array(455, 457, 19), PackedInt32Array(453, 455, 19), PackedInt32Array(451, 453, 19), PackedInt32Array(449, 451, 19), PackedInt32Array(447, 449, 19), PackedInt32Array(445, 447, 19), PackedInt32Array(443, 445, 19), PackedInt32Array(441, 443, 19), PackedInt32Array(439, 441, 19), PackedInt32Array(437, 439, 19), PackedInt32Array(435, 437, 19), PackedInt32Array(433, 435, 19), PackedInt32Array(431, 433, 19), PackedInt32Array(251, 255, 565, 55, 54, 6), PackedInt32Array(566, 567, 568, 569, 570, 12, 571, 572, 573), PackedInt32Array(574, 575, 576, 577, 578, 579, 9, 580, 581), PackedInt32Array(582, 154, 157), PackedInt32Array(327, 315, 317), PackedInt32Array(519, 583, 516), PackedInt32Array(523, 584, 520), PackedInt32Array(527, 585, 524), PackedInt32Array(531, 586, 528), PackedInt32Array(535, 587, 532), PackedInt32Array(539, 588, 536), PackedInt32Array(589, 590, 552, 544), PackedInt32Array(591, 592, 554), PackedInt32Array(230, 232, 234, 237), PackedInt32Array(237, 245, 247), PackedInt32Array(23, 249, 214, 217), PackedInt32Array(37, 593, 508), PackedInt32Array(514, 594, 511), PackedInt32Array(23, 217, 24), PackedInt32Array(595, 25, 24), PackedInt32Array(595, 24, 596, 597), PackedInt32Array(597, 596, 252, 251), PackedInt32Array(327, 317, 319), PackedInt32Array(365, 367, 369), PackedInt32Array(327, 319, 321), PackedInt32Array(95, 505, 506, 327, 336), PackedInt32Array(598, 281, 280, 273), PackedInt32Array(327, 321, 323, 63), PackedInt32Array(158, 161, 505, 95, 599), PackedInt32Array(131, 600, 276), PackedInt32Array(601, 602, 603, 184), PackedInt32Array(111, 604, 605), PackedInt32Array(153, 606, 607), PackedInt32Array(157, 608, 599), PackedInt32Array(582, 157, 599, 95, 607), PackedInt32Array(153, 607, 95), PackedInt32Array(150, 153, 95, 605), PackedInt32Array(108, 111, 605, 95, 213), PackedInt32Array(342, 344, 346), PackedInt32Array(490, 589, 544, 546, 491), PackedInt32Array(54, 4, 6), PackedInt32Array(579, 7, 9), PackedInt32Array(570, 10, 12), PackedInt32Array(365, 369, 371, 71), PackedInt32Array(381, 383, 385), PackedInt32Array(381, 385, 387), PackedInt32Array(381, 387, 389), PackedInt32Array(609, 47, 51, 393, 610), PackedInt32Array(539, 611, 612, 613, 614, 535, 534), PackedInt32Array(535, 615, 616, 617, 618, 531, 530), PackedInt32Array(531, 619, 620, 621, 622, 527, 526), PackedInt32Array(527, 623, 624, 625, 626, 523, 522), PackedInt32Array(627, 628, 629, 630, 523), PackedInt32Array(514, 631, 632, 29, 32, 550), PackedInt32Array(633, 634, 635, 636, 519, 518, 566), PackedInt32Array(637, 638, 33, 37, 510, 519), PackedInt32Array(53, 74, 76), PackedInt32Array(381, 389, 168, 167, 548), PackedInt32Array(208, 207, 103, 107), PackedInt32Array(208, 542, 570, 569), PackedInt32Array(566, 573, 633), PackedInt32Array(519, 636, 637), PackedInt32Array(546, 37, 36, 491), PackedInt32Array(342, 346, 348, 340), PackedInt32Array(610, 393, 395), PackedInt32Array(340, 348, 350, 351), PackedInt32Array(184, 639, 640, 340, 351, 80, 204, 601), PackedInt32Array(91, 92, 120, 89), PackedInt32Array(201, 89, 120, 123), PackedInt32Array(639, 202, 201, 123, 640), PackedInt32Array(100, 273, 558, 601, 204), PackedInt32Array(610, 395, 397), PackedInt32Array(276, 598, 273), PackedInt32Array(100, 102, 270, 273), PackedInt32Array(610, 397, 399), PackedInt32Array(429, 264, 218, 221), PackedInt32Array(539, 538, 575, 574, 611), PackedInt32Array(610, 399, 401), PackedInt32Array(186, 591, 554, 482, 211), PackedInt32Array(610, 401, 403), PackedInt32Array(498, 179, 551, 550), PackedInt32Array(610, 403, 405), PackedInt32Array(610, 405, 407), PackedInt32Array(514, 513, 523, 630, 631), PackedInt32Array(610, 407, 409, 561, 266, 563), PackedInt32Array(429, 221, 173), PackedInt32Array(424, 176, 175), PackedInt32Array(422, 424, 175), PackedInt32Array(420, 422, 175), PackedInt32Array(418, 420, 175), PackedInt32Array(416, 418, 175), PackedInt32Array(413, 416, 175), PackedInt32Array(610, 563, 579, 578), PackedInt32Array(535, 614, 615), PackedInt32Array(531, 618, 619), PackedInt32Array(527, 622, 623), PackedInt32Array(523, 626, 627), PackedInt32Array(550, 32, 498), PackedInt32Array(127, 551, 190, 189, 124), PackedInt32Array(124, 189, 77, 80), PackedInt32Array(80, 84, 204), PackedInt32Array(184, 603, 641), PackedInt32Array(184, 641, 492, 186), PackedInt32Array(185, 186, 211)])

[node name="GatherZone" type="Node2D"]
script = ExtResource("1_kb2wk")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
position = Vector2(-40, -40)
navigation_polygon = SubResource("NavigationPolygon_8wn5g")

[node name="Node2D" parent="NavigationRegion2D" instance=ExtResource("3_g220s")]

[node name="Layer0" parent="NavigationRegion2D/Node2D" index="0"]
scale = Vector2(2.5, 2.5)

[node name="Layer1" parent="NavigationRegion2D/Node2D" index="1"]
scale = Vector2(2.5, 2.5)

[node name="Resources" type="Node" parent="."]

[node name="Player" parent="." instance=ExtResource("3_btvfw")]

[node name="TargetMarker" parent="." instance=ExtResource("4_doxxt")]

[node name="HUD" parent="." instance=ExtResource("5_g220s")]

[node name="RoundEnd" parent="." instance=ExtResource("6_8q4u7")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_doxxt")
volume_db = -6.0
autoplay = true

[editable path="NavigationRegion2D/Node2D"]
